--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,31 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.1.1'
+        kotlin_version = '1.6.10'
+        hilt_version = '2.38.1'
+        accompanist_version = '0.24.3-alpha'
+        lifecycle_version = '2.4.1'
+        retrofit_version = '2.9.0'
+        okhttp_version = '4.9.1'
+        swiperefresh_version = '0.23.1'
+        insets_version = '0.24.3-alpha'
+        room_version = '2.2.6'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.2.0-beta03' apply false
     id 'com.android.library' version '7.2.0-beta03' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
