--- a/versions.gradle
+++ b/versions.gradle
@@ -22,9 +22,10 @@ ext {
     kotlinx_version = '1.1.0'
     datastore_version = '1.0.0'
     coil_version = '1.4.0'
-    lottie_version = '4.0.0'
+    lottie_version = '4.2.2'
     shimmer_version = '1.0.0'
     navigation_version = '2.4.0-alpha07'
+    coil_version = '1.4.0'
 
     //Network
     retrofit_version = '2.9.0'
