--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.2.0-beta03' apply false
-    id 'com.android.library' version '7.2.0-beta03' apply false
+    id 'com.android.application' version '7.2.0' apply false
+    id 'com.android.library' version '7.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
