--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,9 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
 
+    implementation "androidx.tracing:tracing:$tracing_version"
+    implementation "androidx.tracing:tracing-ktx:$tracing_version"
+
     //Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -129,6 +132,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
 }
 
 // Allow references to generated code
