--- a/versions.gradle
+++ b/versions.gradle
@@ -9,23 +9,21 @@ ext {
     gradle_plugin_version = '4.1.3'
 
     // Dependencies
-    compose_version = '1.1.1'
-    kotlin_version = '1.6.10'
-    hilt_version = '2.40.1'
+    compose_version = '1.3.2'
+    kotlin_version = '1.7.20'
+    hilt_version = '2.44.2'
     accompanist_version = '0.24.3-alpha'
-    lifecycle_version = '2.4.1'
-    paging_version = '1.0.0-alpha14'
+    lifecycle_version = '2.5.1'
+    paging_version = '1.0.0-alpha17'
     swiperefresh_version = '0.23.1'
-    insets_version = '0.24.3-alpha'
-    room_version = '2.4.2'
+    room_version = '2.5.0'
     kotlinx_version = '1.1.0'
     datastore_version = '1.0.0'
-    coil_version = '1.4.0'
+    coil_version = '2.2.2'
     lottie_version = '4.2.2'
     shimmer_version = '1.0.0'
-    navigation_version = '2.4.0-alpha07'
-    coil_version = '1.4.0'
-    splash_version = '1.0.0-beta02'
+    navigation_version = "2.5.3"
+    splash_version = '1.0.0'
     tracing_version = "1.2.0-alpha01"
 
     //Network
