--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 local.properties
 .idea/deploymentTargetDropDown.xml
 .idea/inspectionProfiles/Project_Default.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/compiler.xml
